// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render correctly on handleClick 1`] = `
<styled.div>
  <Header />
  <styled.section>
    <styled.span>
      scissors
    </styled.span>
    <styled.span>
      User won
    </styled.span>
    <styled.span>
      1
      -
      0
    </styled.span>
    <styled.span>
      paper
    </styled.span>
  </styled.section>
  <styled.section>
    <UserScreen
      action={[Function]}
    />
    <ComputerScreen />
  </styled.section>
</styled.div>
`;

exports[`App should render correctly on handleClick 2`] = `
<styled.div>
  <Header />
  <styled.section>
    <styled.span>
      scissors
    </styled.span>
    <styled.span>
      User won
    </styled.span>
    <styled.span>
      2
      -
      0
    </styled.span>
    <styled.span>
      paper
    </styled.span>
  </styled.section>
  <styled.section>
    <UserScreen
      action={[Function]}
    />
    <ComputerScreen />
  </styled.section>
</styled.div>
`;

exports[`App should render correctlyt 1`] = `
<styled.div>
  <Header />
  <styled.section>
    <styled.span />
    <styled.span>
      Draw
    </styled.span>
    <styled.span>
      0
      -
      0
    </styled.span>
    <styled.span />
  </styled.section>
  <styled.section>
    <UserScreen
      action={[Function]}
    />
    <ComputerScreen />
  </styled.section>
</styled.div>
`;
